# biliup-app-new

./: .gitignore  .prettierignore  .prettierrc  LICENSE  README.md  package-lock.json  package.json  update_version.sh  vite.config.ts
.github/workflows/: release.yml
src/: App.vue  main.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/commands/: auth.rs  config.rs  mod.rs  upload.rs  utils.rs
src-tauri/src/models/: mod.rs  upload_form.rs  upload_task.rs  user.rs  user_config.rs
src-tauri/src/services/: auth_service.rs  mod.rs  upload_service.rs
src-tauri/src/utils/: compatible.rs  crypto.rs  file_utils.rs  mod.rs
src/components/: DataPicker.vue  DatePicker.vue  DescView.vue  FloderWatch.vue  GlobalConfig.vue  LoginView.vue  MentionView.vue  NewTemplete.vue  SeasonView.vue  StaffView.vue  SubmitStatsPage.vue  TagView.vue  TemplateSidebar.vue  TopicView.vue  UserConfig.vue  UserList.vue  VideoList.vue  VideoStatus.vue
src/composables/: useMentionSearchShared.ts  useUserOrderSortable.ts
src/router/: index.ts
src/stores/: auth.ts  upload.ts  user_config.ts  utils.ts
src/types/: mention.ts
src/utils/: country_codes.ts
src/views/: FloderWatch.vue  GlobalConfig.vue  GlobalConfigView.vue  LoginView.vue  MainView.vue  NewTemplete.vue  SeasonView.vue  TopicView.vue  UploadQueue.vue  UserConfig.vue  UserList.vue  VideoList.vue
